--- a/src/components/css/searchResults.css
+++ b/src/components/css/searchResults.css
@@ -1,4 +1,6 @@
 #search-results {
+  position: relative;
+  overflow: hidden;
   min-height: 100vh;
 }
 
